Uvarajan D to Uvarajan Dinakaran

--- a/templates/index.html
+++ b/templates/index.html
@@ -213,7 +213,7 @@ $$$$$$$$/ $$$$$$$$/ /$$$$$$  |$$  \   /$$ |      /$$$$$$  |/$$$$$$  |$$$$$$$  |/
                                     <img src="/static/img/ulogo.jpg">
                                 </div>
                                 <div class="member-details">
-                                    <span>Uvarajan D</span>
+                                    <span>Uvarajan Dinakaran</span>
                                 </div>
                             </div>
                         </div>
